--- a/test/figures.ipynb
+++ b/test/figures.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     "\n",
     "ax.grid(which=\"both\")\n",
     "\n",
-    "plt.savefig(\"../images/figures/coffee_brewing.pdf\")\n",
+    "plt.savefig(\"../images/figures/coffee_brewing.png\")\n",
     "plt.show()\n",
     "plt.close()"
    ]
